<resources>
    <string name="app_name">My Adapters</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="content_main">My adapters</string>
    <string name="title_activity_simplest_adapter">The First Adapter</string>
    <string name="simplest_adapter">The first adapter</string>
    <string name="title_activity_handmade_layout">Handmade Layout Activity</string>
    <string name="handmade_adapter">Handmade adapter</string>
    <string name="title_activity_handmade_layout_with_pictures">Simple Adapter Activity
    </string>
    <string name="simple_adapter">The Simple Adapter</string>
    <string name="writer_name">Writer name</string>
    <string name="title_activity_array_adapter">Array Adapter Activity</string>
    <string name="array_adapter">Array Adapter</string>
    <string name="title_activity_fruits">Fruits Activity</string>
    <string name="fruits_adapter">Fruits Adapter</string>
    <string name="fruit_name">Fruit name</string>
    <string name="fruit_description">Fruit description</string>
    <string name="fruit_adapter">Fruits Adapter</string>
    <string name="title_activity_chess_teams">Chess Teams Activity</string>
    <string name="chess_adapter">Chess Team Adapter</string>
    <string name="title_activity_chec_boxes">Check Boxes Activity</string>
    <string name="check_box">CheckBox</string>
    <string name="text_checkboxes">Text CB</string>
    <string name="checkbox_adapter">Check Box Adapter</string>
</resources>
