<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myadapters.Activities.MainActivity">
    <item
        android:id="@+id/home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />

    <item
        android:id="@+id/simplestAdapter"
        android:orderInCategory="100"
        android:title="@string/simplest_adapter"
        app:showAsAction="never" />

    <item
        android:id="@+id/handmadeAdapter"
        android:orderInCategory="100"
        android:title="@string/handmade_adapter"
        app:showAsAction="never" />

    <item
        android:id="@+id/simpleAdapter"
        android:orderInCategory="100"
        android:title="@string/simple_adapter"
        app:showAsAction="never" />

    <item
        android:id="@+id/arrayAdapter"
        android:orderInCategory="100"
        android:title="@string/array_adapter"
        app:showAsAction="never" />

    <item
        android:id="@+id/fruitsAdapter"
        android:orderInCategory="100"
        android:title="@string/fruit_adapter"
        app:showAsAction="never" />

    <item
        android:id="@+id/chessTeamsAdapter"
        android:orderInCategory="100"
        android:title="@string/chess_adapter"
        app:showAsAction="never" />
</menu>
